--- a/changes/cumulative.html
+++ b/changes/cumulative.html
@@ -200,7 +200,7 @@
 
 	<script src="/js/d3/d3.v4.min.js"></script>
 	<script src="/js/billboard.js/billboard.pkgd.js"></script>
-	<script src="Percentages.js"></script>
+	<script src="cumulative.js"></script>
 
 </body>
 
