--- a/changes/cumulative.html
+++ b/changes/cumulative.html
@@ -42,7 +42,7 @@
 			display: none;
 		}
 	</style>
-	<link rel="stylesheet" type="text/css" href="/js/billboard.js/billboard.css" />
+	<link rel="stylesheet" type="text/css" href="/js/billboard.js/billboard.min.css" />
 </head>
 
 <body>
