--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     Hello world!
+    
+    <a href="https://fxtools.github.io/changes/cumulative.html">cumulative changes</a>
+    
   </body>
 </html>
