--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <body>
     Hello world!
     
-    <a href="https://fxtools.github.io/changes/cumulative.html">cumulative changes</a>
+    <section>
+      <a href="https://fxtools.github.io/changes/cumulative.html">cumulative changes</a>
+    </section>
     
   </body>
 </html>
