--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <section>
       <a href="https://fxtools.github.io/changes/cumulative.html">cumulative changes</a>
     </section>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112925276-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112925276-1');
+</script>
     
   </body>
 </html>
