--- a/changes/cumulative.html
+++ b/changes/cumulative.html
@@ -202,6 +202,16 @@
 	<script src="/js/billboard.js/billboard.min.js"></script>
 	<script src="cumulative.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112925276-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112925276-1');
+</script>
+
 </body>
 
 </html>
