--- a/changes/cumulative.html
+++ b/changes/cumulative.html
@@ -29,7 +29,7 @@
 			margin: 0.3vw;
 			padding: 0.3vw;
 			f-ont-size: 1.08vw;
-			font-size: 0.65vw;
+			f-ont-size: 0.65vw;
 			display: inline-block;
 			color: black;
 		}
