--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Hello world!
     
     <section>
-      <a href="https://fxtools.github.io/changes/cumulative.html">cumulative changes</a>
+      <a href="https://fxtools.github.io/change/cumulative.html">cumulative change</a>
     </section>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
