--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -199,7 +199,7 @@
 	</ul>
 
 	<script src="/js/d3/d3.v4.min.js"></script>
-	<script src="/js/billboard.js/billboard.min.js"></script>
+	<script src="/js/luxon/luxon.min.js"></script>
 	<script src="cumulative.js"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
