--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>FX Tools</title>
-
+	<meta http-equiv="expires" content="0">
 	<style>
 		* {
 			margin: 0px;
