--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -223,7 +223,7 @@
 
 	<script src="/js/d3/d3.v4.min.js"></script>
 	<script src="/js/luxon/luxon.min.js"></script>
-	<script src="/js/billboard.js/billboard.pkgd.min.js"></script>
+	<script src="/js/billboard.js/billboard.min.js"></script>
 	<script src="cumulative.js"></script>
 
 </body>
