--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -221,6 +221,15 @@
 
 	</ul>
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112925276-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'UA-112925276-1');
+	</script>
+
 	<script src="/js/d3/d3.v4.min.js"></script>
 	<script src="/js/luxon/luxon.min.js"></script>
 	<script src="/js/billboard.js/billboard.min.js"></script>
