--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -62,12 +62,14 @@
 
 <body>
 
-	Asian Session:
-	<div id="asia" class="cumulative"></div>
-	European Session:
-	<div id="europe" class="cumulative"></div>
-	North American Session:
-	<div id="america" class="cumulative"></div>
+	<div style="overflow: scroll;">
+		Asian Session:
+		<div id="asia" class="cumulative"></div>
+		European Session:
+		<div id="europe" class="cumulative"></div>
+		North American Session:
+		<div id="america" class="cumulative"></div>
+	</div>
 
 	<center>
 		<h1 id="chartCaption"></h1>
