--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -16,7 +16,7 @@
 		}
 
 		.cumulative {
-			background: linear-gradient(to right, green 0%, gray 33%, gray 66%, red 100%);
+			b-ackground: linear-gradient(to right, green 0%, gray 33%, gray 66%, red 100%);
 			white-space: nowrap;
 			margin: 0 auto;
 			w-idth: 100vw;
@@ -25,10 +25,7 @@
 			padding: 0.3vw;
 		}
 
-		.cumulative>div {
-			display: inline-block;
-			margin: 5px;
-		}
+		.cumulative>div {}
 
 		.cumulative span {
 			color: black;
@@ -55,10 +52,17 @@
 		}
 
 		#chart {}
-		
+
 		#percentages {
 			overflow-x: auto;
 			width: 100%;
+		}
+
+		.tile {
+			display: inline-block;
+			margin: 1px;
+			padding: 5px;
+			border-radius: 3px
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="/js/billboard.js/billboard.min.css" />
