--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -67,7 +67,7 @@
 
 		#navi {
 			font-size: 15px;
-			width: 250px;
+			max-width: 300px;
 			margin: auto;
 			padding: 10px;
 		}
@@ -92,8 +92,9 @@
 
 	<section id="navi">
 		<a id="prev" href="">&lt;&lt;</a>
-		<h1 id="date"></h1>
+		<h1 id="date">0000-00-00</h1>
 		<a id="next" href="">&gt;&gt;</a>
+		<a id="today" href="">today</a>
 	</section>
 
 	<section id="percentages">
