--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -25,8 +25,6 @@
 			padding: 0.3vw;
 		}
 
-		.cumulative>div {}
-
 		.cumulative span {
 			color: black;
 		}
@@ -65,10 +63,9 @@
 			border-radius: 3px
 		}
 
-		#navi {
+		#navi,
+		#navi2 {
 			font-size: 15px;
-			max-width: 300px;
-			margin: auto;
 			padding: 10px;
 		}
 
@@ -92,233 +89,307 @@
 			display: none;
 		}
 
-		li {
+		#filter {
+			background-color: #272b38;
+		}
+
+		#filter li {
 			list-style: none;
 			margin: 5px;
+			color: #48d8a0;
 		}
 
-		#filter {
-			margin: 10px;
+		#filter th {
+			color: #6a7490;
 		}
 
-		#filter>tbody>tr>td {
+		#filter td {
 			vertical-align: top;
 			padding: 10px 10px 10px 10px;
 		}
+
+		header {
+			background-color: #272b38;
+			color: #48d8a0;
+		}
+
+		header#subNavi {
+			background-color: darkred;
+			display: none;
+		}
+
+		header li {
+			list-style: none;
+			display: inline-block;
+			margin: 10px;
+			text-align: center;
+			vertical-align: top;
+		}
+
+		section {
+			padding: 10px;
+		}
+
+		a {
+			text-decoration: none;
+		}
+
+		a:hover {
+			text-shadow: 0 0 5px #ff0000;
+
+			text-shadow: 1px 0px 20px yellow;
+		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="/js/billboard.js/billboard.min.css" />
+	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 
 <body>
 
-	<section id="navi">
-		<a id="prev" href="">&lt;&lt;</a>
-		<h1 id="date">0000-00-00</h1>
-		<a id="next" href="">&gt;&gt;</a>
-		<a id="today" href="">today</a>
-	</section>
-
-	<section id="percentages">
-		<div id="container-asia">
-			<h3 id="heading-asia">Asian Session:</h3>
-			<div id="asia" class="cumulative"></div>
-		</div>
-		<div id="container-europe">
-			<h3>European Session:</h3>
-			<div id="europe" class="cumulative"></div>
-		</div>
-		<div id="container-america">
-			<h3>North American Session:</h3>
-			<div id="america" class="cumulative"></div>
-		</div>
-	</section>
 
 	<center>
-		<h2 id="chartCaption"></h2>
-		<div id="chart"></div>
+
+		<header>
+
+			<ul>
+				<li>
+					<a id="prev" class="hide" href="javascript:void(0);">&lt;&lt;</a>
+				</li>
+				<li>
+					<h1 id="date"></h1>
+				</li>
+				<li>
+					<a id="next" class="hide" href="javascript:void(0);">&gt;&gt;</a>
+				</li>
+				<li>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				</li>
+				<li>
+					<a href="javascript:void(0);" onclick="var el = document.getElementById('filter'); el.classList.contains('hide') ? el.classList.remove('hide') : el.classList.add('hide');">
+						<i class="fas fa-cogs" style="margin-left: 0px"></i>
+					</a>
+				</li>
+				<li>
+					<a id="commentCounterLink" href="#disqus_thread" onclick='var d = document, s = d.createElement("script"); s.src = "https://fx-tools.disqus.com/embed.js"; s.setAttribute("data-timestamp", +new Date()); d.body.appendChild(s); this.onclick="";'>
+						<i class="fas fa-comments"></i>
+					</a>
+				</li>
+				<li>
+					<i class="fas fa-question"></i>
+				</li>
+			</ul>
+
+		</header>
+
+		<header id="subNavi">
+			<ul>
+				<li>
+					<a id="jumpToCurrentDay" href="javascript:void(0);">jump to current day</a>
+				</li>
+			</ul>
+		</header>
+
+		<section id="filter" class="hide">
+
+			<table border="0">
+				<tr>
+					<th>Majors</th>
+					<th>Minors1</th>
+					<th>Minors2</th>
+					<th>Metals</th>
+					<th>Crypto</th>
+				</tr>
+				<tr>
+					<td>
+						<ul>
+							<li>
+								<input id="USD" class="show" name="majors[]" type="checkbox" value="USD" />
+								<label for="USD">USD</label>
+							</li>
+							<li>
+								<input id="EUR" class="show" name="majors[]" type="checkbox" value="EUR" />
+								<label for="EUR">EUR</label>
+							</li>
+							<li>
+								<input id="JPY" class="show" name="majors[]" type="checkbox" value="JPY" />
+								<label for="JPY">JPY</label>
+							</li>
+							<li>
+								<input id="GBP" class="show" name="majors[]" type="checkbox" value="GBP" />
+								<label for="GBP">GBP</label>
+							</li>
+							<li>
+								<input id="AUD" class="show" name="majors[]" type="checkbox" value="AUD" />
+								<label for="AUD">AUD</label>
+							</li>
+							<li>
+								<input id="CAD" class="show" name="majors[]" type="checkbox" value="CAD" />
+								<label for="CAD">CAD</label>
+							</li>
+							<li>
+								<input id="CHF" class="show" name="majors[]" type="checkbox" value="CHF" />
+								<label for="CHF">CHF</label>
+							</li>
+							<li>
+								<input id="NZD" class="show" name="majors[]" type="checkbox" value="NZD" />
+								<label for="NZD">NZD</label>
+							</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>
+								<input id="CNY" class="show" name="minors1[]" type="checkbox" value="CNY">
+								<label for="CNY">CNY</label>
+							</li>
+							<li>
+								<input id="SEK" class="show" name="minors1[]" type="checkbox" value="SEK">
+								<label for="SEK">SEK</label>
+							</li>
+							<li>
+								<input id="MXN" class="show" name="minors1[]" type="checkbox" value="MXN">
+								<label for="MXN">MXN</label>
+							</li>
+							<li>
+								<input id="SGD" class="show" name="minors1[]" type="checkbox" value="SGD">
+								<label for="SGD">SGD</label>
+							</li>
+							<li>
+								<input id="HKD" class="show" name="minors1[]" type="checkbox" value="HKD">
+								<label for="HKD">HKD</label>
+							</li>
+							<li>
+								<input id="NOK" class="show" name="minors1[]" type="checkbox" value="NOK">
+								<label for="NOK">NOK</label>
+							</li>
+							<li>
+								<input id="KRW" class="show" name="minors1[]" type="checkbox" value="KRW">
+								<label for="KRW">KRW</label>
+							</li>
+							<li>
+								<input id="TRY" class="show" name="minors1[]" type="checkbox" value="TRY">
+								<label for="TRY">TRY</label>
+							</li>
+							<li>
+								<input id="RUB" class="show" name="minors1[]" type="checkbox" value="RUB">
+								<label for="RUB">RUB</label>
+							</li>
+							<li>
+								<input id="INR" class="show" name="minors1[]" type="checkbox" value="INR">
+								<label for="INR">INR</label>
+							</li>
+							<li>
+								<input id="BRL" class="show" name="minors1[]" type="checkbox" value="BRL">
+								<label for="BRL">BRL</label>
+							</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>
+								<input id="ZAR" class="show" name="minors2[]" type="checkbox" value="ZAR">
+								<label for="ZAR">ZAR</label>
+							</li>
+							<li>
+								<input id="DKK" class="show" name="minors2[]" type="checkbox" value="DKK">
+								<label for="DKK">DKK</label>
+							</li>
+							<li>
+								<input id="PLN" class="show" name="minors2[]" type="checkbox" value="PLN">
+								<label for="PLN">PLN</label>
+							</li>
+							<li>
+								<input id="TWD" class="show" name="minors2[]" type="checkbox" value="TWD">
+								<label for="TWD">TWD</label>
+							</li>
+							<li>
+								<input id="THB" class="show" name="minors2[]" type="checkbox" value="THB">
+								<label for="THB">THB</label>
+							</li>
+							<li>
+								<input id="MYR" class="show" name="minors2[]" type="checkbox" value="MYR">
+								<label for="MYR">MYR</label>
+							</li>
+							<li>
+								<input id="HUF" class="show" name="minors2[]" type="checkbox" value="HUF">
+								<label for="HUF">HUF</label>
+							</li>
+							<li>
+								<input id="SAR" class="show" name="minors2[]" type="checkbox" value="SAR">
+								<label for="SAR">SAR</label>
+							</li>
+							<li>
+								<input id="CZK" class="show" name="minors2[]" type="checkbox" value="CZK">
+								<label for="CZK">CZK</label>
+							</li>
+							<li>
+								<input id="ILS" class="show" name="minors2[]" type="checkbox" value="ILS">
+								<label for="ILS">ILS</label>
+							</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>
+								<input id="XAU" class="show" name="metals[]" type="checkbox" value="XAU">
+								<label for="XAU">XAU</label>
+							</li>
+							<li>
+								<input id="XAG" class="show" name="metals[]" type="checkbox" value="XAG">
+								<label for="XAG">XAG</label>
+							</li>
+							<li>
+								<input id="XPD" class="show" name="metals[]" type="checkbox" value="XPD">
+								<label for="XPD">XPD</label>
+							</li>
+							<li>
+								<input id="XPT" class="show" name="metals[]" type="checkbox" value="XPT">
+								<label for="XPT">XPT</label>
+							</li>
+						</ul>
+					</td>
+					<td>
+						<ul>
+							<li>
+								<input id="BTC" class="show" name="crypto[]" type="checkbox" value="BTC">
+								<label for="BTC">BTC</label>
+							</li>
+							<li>
+								<input id="ETH" class="show" name="crypto[]" type="checkbox" value="ETH">
+								<label for="ETH">ETH</label>
+							</li>
+							<li>
+								<input id="XRP" class="show" name="crypto[]" type="checkbox" value="XRP">
+								<label for="XRP">XRP</label>
+							</li>
+						</ul>
+					</td>
+				</tr>
+			</table>
+		</section>
+
+		<section id="percentages">
+			<div id="container-asia">
+				<h3 id="heading-asia">Asian Session</h3>
+				<div id="asia" class="cumulative"></div>
+			</div>
+			<div id="container-europe">
+				<h3>European Session</h3>
+				<div id="europe" class="cumulative"></div>
+			</div>
+			<div id="container-america">
+				<h3>North American Session</h3>
+				<div id="america" class="cumulative"></div>
+			</div>
+		</section>
 
 		<br/>
 		<hr/>
 		<br/>
 
-		<button name="showFilter" onclick="var el = document.getElementById('filter'); el.classList.contains('hide') ? el.classList.remove('hide') : el.classList.add('hide');">show/hide Filter</button>
-		<button onclick='this.style.display="none"; w(document.body); var d = document, s = d.createElement("script"); s.src = "https://fx-tools.disqus.com/embed.js"; s.setAttribute("data-timestamp", +new Date()); d.body.appendChild(s);'>show comments</button>
+		<h2 id="chartCaption"></h2>
+		<div id="chart"></div>
 
-		<table border="0" id="filter" class="hide">
-			<tr>
-				<th>Majors</th>
-				<th>Minors1</th>
-				<th>Minors2</th>
-				<th>Metals</th>
-				<th>Crypto</th>
-			</tr>
-			<tr>
-				<td>
-					<ul>
-						<li>
-							<input id="USD" class="show" name="majors[]" type="checkbox" value="USD" />
-							<label for="USD">USD</label>
-						</li>
-						<li>
-							<input id="EUR" class="show" name="majors[]" type="checkbox" value="EUR" />
-							<label for="EUR">EUR</label>
-						</li>
-						<li>
-							<input id="JPY" class="show" name="majors[]" type="checkbox" value="JPY" />
-							<label for="JPY">JPY</label>
-						</li>
-						<li>
-							<input id="GBP" class="show" name="majors[]" type="checkbox" value="GBP" />
-							<label for="GBP">GBP</label>
-						</li>
-						<li>
-							<input id="AUD" class="show" name="majors[]" type="checkbox" value="AUD" />
-							<label for="AUD">AUD</label>
-						</li>
-						<li>
-							<input id="CAD" class="show" name="majors[]" type="checkbox" value="CAD" />
-							<label for="CAD">CAD</label>
-						</li>
-						<li>
-							<input id="CHF" class="show" name="majors[]" type="checkbox" value="CHF" />
-							<label for="CHF">CHF</label>
-						</li>
-						<li>
-							<input id="NZD" class="show" name="majors[]" type="checkbox" value="NZD" />
-							<label for="NZD">NZD</label>
-						</li>
-					</ul>
-				</td>
-				<td>
-					<ul>
-						<li>
-							<input id="CNY" class="show" name="minors1[]" type="checkbox" value="CNY">
-							<label for="CNY">CNY</label>
-						</li>
-						<li>
-							<input id="SEK" class="show" name="minors1[]" type="checkbox" value="SEK">
-							<label for="SEK">SEK</label>
-						</li>
-						<li>
-							<input id="MXN" class="show" name="minors1[]" type="checkbox" value="MXN">
-							<label for="MXN">MXN</label>
-						</li>
-						<li>
-							<input id="SGD" class="show" name="minors1[]" type="checkbox" value="SGD">
-							<label for="SGD">SGD</label>
-						</li>
-						<li>
-							<input id="HKD" class="show" name="minors1[]" type="checkbox" value="HKD">
-							<label for="HKD">HKD</label>
-						</li>
-						<li>
-							<input id="NOK" class="show" name="minors1[]" type="checkbox" value="NOK">
-							<label for="NOK">NOK</label>
-						</li>
-						<li>
-							<input id="KRW" class="show" name="minors1[]" type="checkbox" value="KRW">
-							<label for="KRW">KRW</label>
-						</li>
-						<li>
-							<input id="TRY" class="show" name="minors1[]" type="checkbox" value="TRY">
-							<label for="TRY">TRY</label>
-						</li>
-						<li>
-							<input id="RUB" class="show" name="minors1[]" type="checkbox" value="RUB">
-							<label for="RUB">RUB</label>
-						</li>
-						<li>
-							<input id="INR" class="show" name="minors1[]" type="checkbox" value="INR">
-							<label for="INR">INR</label>
-						</li>
-						<li>
-							<input id="BRL" class="show" name="minors1[]" type="checkbox" value="BRL">
-							<label for="BRL">BRL</label>
-						</li>
-					</ul>
-				</td>
-				<td>
-					<ul>
-						<li>
-							<input id="ZAR" class="show" name="minors2[]" type="checkbox" value="ZAR">
-							<label for="ZAR">ZAR</label>
-						</li>
-						<li>
-							<input id="DKK" class="show" name="minors2[]" type="checkbox" value="DKK">
-							<label for="DKK">DKK</label>
-						</li>
-						<li>
-							<input id="PLN" class="show" name="minors2[]" type="checkbox" value="PLN">
-							<label for="PLN">PLN</label>
-						</li>
-						<li>
-							<input id="TWD" class="show" name="minors2[]" type="checkbox" value="TWD">
-							<label for="TWD">TWD</label>
-						</li>
-						<li>
-							<input id="THB" class="show" name="minors2[]" type="checkbox" value="THB">
-							<label for="THB">THB</label>
-						</li>
-						<li>
-							<input id="MYR" class="show" name="minors2[]" type="checkbox" value="MYR">
-							<label for="MYR">MYR</label>
-						</li>
-						<li>
-							<input id="HUF" class="show" name="minors2[]" type="checkbox" value="HUF">
-							<label for="HUF">HUF</label>
-						</li>
-						<li>
-							<input id="SAR" class="show" name="minors2[]" type="checkbox" value="SAR">
-							<label for="SAR">SAR</label>
-						</li>
-						<li>
-							<input id="CZK" class="show" name="minors2[]" type="checkbox" value="CZK">
-							<label for="CZK">CZK</label>
-						</li>
-						<li>
-							<input id="ILS" class="show" name="minors2[]" type="checkbox" value="ILS">
-							<label for="ILS">ILS</label>
-						</li>
-					</ul>
-				</td>
-				<td>
-					<ul>
-						<li>
-							<input id="XAU" class="show" name="metals[]" type="checkbox" value="XAU">
-							<label for="XAU">XAU</label>
-						</li>
-						<li>
-							<input id="XAG" class="show" name="metals[]" type="checkbox" value="XAG">
-							<label for="XAG">XAG</label>
-						</li>
-						<li>
-							<input id="XPD" class="show" name="metals[]" type="checkbox" value="XPD">
-							<label for="XPD">XPD</label>
-						</li>
-						<li>
-							<input id="XPT" class="show" name="metals[]" type="checkbox" value="XPT">
-							<label for="XPT">XPT</label>
-						</li>
-					</ul>
-				</td>
-				<td>
-					<ul>
-						<li>
-							<input id="BTC" class="show" name="crypto[]" type="checkbox" value="BTC">
-							<label for="BTC">BTC</label>
-						</li>
-						<li>
-							<input id="ETH" class="show" name="crypto[]" type="checkbox" value="ETH">
-							<label for="ETH">ETH</label>
-						</li>
-						<li>
-							<input id="XRP" class="show" name="crypto[]" type="checkbox" value="XRP">
-							<label for="XRP">XRP</label>
-						</li>
-					</ul>
-				</td>
-			</tr>
-		</table>
 	</center>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -340,6 +411,7 @@
 	<br/>
 
 	<div id="disqus_thread"></div>
+	<script id="dsq-count-scr" src="//fx-tools.disqus.com/count.js" async></script>
 
 </body>
 
