--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8">
 	<title>FX Tools</title>
 	<meta http-equiv="expires" content="0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+
 	<style>
 		* {
 			margin: 0px;
@@ -53,7 +55,6 @@
 
 		#percentages {
 			overflow-x: auto;
-			width: 100%;
 		}
 
 		.tile {
