--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -51,7 +51,10 @@
 			display: none;
 		}
 
-		#chart {}
+		#chart {
+			margin-left: 5%;
+			margin-right: 10%;
+		}
 
 		#percentages {
 			overflow-x: auto;
@@ -61,7 +64,8 @@
 			display: inline-block;
 			margin: 1px;
 			padding: 5px;
-			border-radius: 3px
+			border-radius: 3px;
+			width: 50px;
 		}
 
 		#navi,
