--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -392,6 +392,7 @@
 		<section id="charts">
 			<h2 id="chartCaption"></h2>
 			<div id="chart"></div>
+			<div id="old"></div>
 		</section>
 
 		<section id="comments">
@@ -415,6 +416,14 @@
 		<script id="dsq-count-scr" src="//fx-tools.disqus.com/count.js" async></script>
 
 	</center>
+
+
+
+
+	<div id="CombinationChart"></div>
+	<script>
+
+	</script>
 
 </body>
 
