--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -6,7 +6,6 @@
 	<title>FX Tools</title>
 	<meta http-equiv="expires" content="0">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-
 	<style>
 		* {
 			margin: 0px;
@@ -141,31 +140,46 @@
 		}
 
 		a:hover {
-			text-shadow: 0 0 5px #ff0000;
-
 			text-shadow: 1px 0px 20px yellow;
+		}
+
+		.noselect {
+			-webkit-touch-callout: none;
+			-webkit-user-select: none;
+			-khtml-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			-o-user-select: none;
+			user-select: none;
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="/js/billboard.js/billboard.min.css" />
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 </head>
 
-<body>
-
-
+<body class="noselect" unselectable="on" onselectstart="return false;" onmousedown="return false;">
 	<center>
 
 		<header>
 
 			<ul>
-				<li>
-					<a id="prev" class="hide" href="javascript:void(0);">&lt;&lt;</a>
+				<li title="show other tools">
+					<a href="/">
+						<i class="fas fa-home"></i>
+					</a>
+				</li>
+				<li title="jump to previous day">
+					<a id="prev" class="hide" href="javascript:void(0);">
+						<i class="fas fa-angle-double-left"></i>
+					</a>
 				</li>
 				<li>
 					<h1 id="date"></h1>
 				</li>
-				<li>
-					<a id="next" class="hide" href="javascript:void(0);">&gt;&gt;</a>
+				<li title="jump to next day">
+					<a id="next" class="hide" href="javascript:void(0);">
+						<i class="fas fa-angle-double-right"></i>
+					</a>
 				</li>
 				<li>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -177,6 +191,7 @@
 				</li>
 				<li>
 					<a id="commentCounterLink" href="#disqus_thread" onclick='var d = document, s = d.createElement("script"); s.src = "https://fx-tools.disqus.com/embed.js"; s.setAttribute("data-timestamp", +new Date()); d.body.appendChild(s); this.onclick="";'>
+						0
 						<i class="fas fa-comments"></i>
 					</a>
 				</li>
@@ -375,6 +390,9 @@
 		</section>
 
 		<section id="percentages">
+			<div id="container-nodata" class="hide">
+				<h3>There is no data for this day just yet.</h3>
+			</div>
 			<div id="container-asia">
 				<h3 id="heading-asia">Asian Session</h3>
 				<div id="asia" class="cumulative"></div>
@@ -416,14 +434,6 @@
 		<script id="dsq-count-scr" src="//fx-tools.disqus.com/count.js" async></script>
 
 	</center>
-
-
-
-
-	<div id="CombinationChart"></div>
-	<script>
-
-	</script>
 
 </body>
 
