--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -158,7 +158,7 @@
 
 	<link href="/js/enjoyhint/enjoyhint.css" rel="stylesheet">
 	<script src="/js/jquery-3.3.1.min.js"></script>
-	<script src="/js/enjoyhint/enjoyhint.js"></script>
+	<script src="/js/enjoyhint/enjoyhint.min.js"></script>
 
 </head>
 
