--- a/change/cumulative.html
+++ b/change/cumulative.html
@@ -479,7 +479,7 @@
 						"next #settings": "This is the filter button." + "<br/><br/>"
 					},
 					{
-						"next #settings": "And this is the filter area." + "<br/><br/>",
+						"next #filter": "And this is the filter area." + "<br/><br/>",
 						onBeforeStart: function () {
 							var el = document.getElementById('filter');
 							el.classList.remove('hide');
