--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     Hello world!
     
     <section>
-      <a href="https://fxtools.github.io/change/cumulative.html">cumulative change</a>
+      <br />
+      <a href="/change/cumulative.html">cumulative change</a>
+      <br />
+      <a href="/cftc/cot.html">CFTC CoT Reports</a>
     </section>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
