--- a/cftc/cot.html
+++ b/cftc/cot.html
@@ -173,16 +173,10 @@
 <body>
 	<center>
 
+		<h1 id="date"></h1>
 		<select id="symbol"></select>
-
 		<br/>
-
-		<span>
-			<span id="name"></span>
-			<span id="units"></span>
-			<br />
-			<span id="date"></span>
-		</span>
+		<br/>
 
 		<table>
 			<tbody id="futures_only_report">
@@ -233,15 +227,13 @@
 				<tr>
 					<th></th>
 					<th class="report_type_caption" colspan="25">
-						[
-						<span>Futures Only Report</span>
-						] [
+						<span>Futures</span>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<span>open interest:</span>
 						<span id="futures_oi_total"></span>
-						] [
-						<span>changes:</span>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<span>change:</span>
 						<span id="futures_oi_changes"></span>
-						]
 					</th>
 				</tr>
 				<tr id="futures_positions">
@@ -368,7 +360,7 @@
 						<span>open interest:</span>
 						<span id="combined_oi_total"></span>
 						] [
-						<span>changes:</span>
+						<span>change:</span>
 						<span id="combined_oi_changes"></span>
 						]
 					</th>
@@ -492,15 +484,13 @@
 				<tr>
 					<th></th>
 					<th class="report_type_caption" colspan="25">
-						[
-						<span>Options Only Calculated Report</span>
-						] [
+						<span>Options</span>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						<span>open interest:</span>
 						<span id="options_oi_total"></span>
-						] [
-						<span>changes:</span>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<span>change:</span>
 						<span id="options_oi_changes"></span>
-						]
 					</th>
 				</tr>
 				<tr id="options_positions">
