--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     Hello world!
     
     <section>
-      <a href="/change/cumulative.html">cumulative change</a>
+      <a href="/change/cumulative.html">Cumulative Change Heatmap</a>
       <br /><br />
-      <a href="/cftc/cot.html">CFTC CoT Reports</a>
+      <a href="/cftc/cot.html">CFTC CoT Report Viewer</a>
     </section>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
